<resources>
    <string name="app_name">VeriDie</string>
    <string name="idle_welcome_text">Press button below to start connecting to other players!</string>
    <string name="idle_btn_start_connecting">New game</string>
    <string name="conn_txt_discovered">Discovered devices:</string>
    <string name="conn_txt_connected">Connected devices:</string>
    <string name="conn_btn_ready">Ready</string>
    <string name="conn_txt_title">Connect to other players, then press “Ready”</string>
    <string name="conn_btn_connect">Connect</string>
    <string name="conn_btn_disconnect">Disconnect</string>
    <string name="neg_txt_wait">Please wait a few seconds…</string>
    <string name="dialog_fatal_title">Fatal failure</string>
    <string name="dialog_exit_title">Exit</string>
    <string name="dialog_exit_prompt">Do you want to exit?</string>
    <string name="dialog_notification_title">Notification</string>
    <string name="ex_invalid_dice_type">Invalid dice type!</string>
    <string name="ex_invalid_count">Request size must be between 1 and 70</string>
    <string name="ex_invalid_threshold">Invalid threshold for success!</string>
    <string name="play_btn_request">Make a cast</string>
    <string name="play_request_w_threshold">%s throws %d %s with success on %d+</string>
    <string name="play_request_wo_threshold">%s throws %d %s</string>
    <string name="play_result_w_count">%d %s were cast with %d successes:</string>
    <string name="play_result_wo_count">%d %s were cast:</string>
    <string name="play_txt_generator">Current result generator: %s</string>
    <string name="request_dice_type">Select dice type:</string>
    <string name="request_dice_num">Enter number of dices:</string>
    <string name="request_threshold">Success from:</string>
    <string name="request_submit">Submit</string>
    <string name="request_title">Request cast</string>
</resources>
