<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ConnectingFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="10pt"
        android:gravity="center_horizontal|bottom"
        android:text="@string/conn_txt_title"
        android:id="@+id/txt_connecting_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="10pt"
        android:gravity="bottom"
        android:id="@+id/txt_discovered_title"
        android:text="@string/conn_txt_discovered" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:id="@+id/list_discovered" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="10pt"
        android:gravity="bottom"
        android:id="@+id/txt_connected_title"
        android:text="@string/conn_txt_connected" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:id="@+id/list_connected" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_margin="5pt"
        android:text="@string/conn_btn_ready"
        android:id="@+id/btn_finished_connecting" />

</LinearLayout>